README.md + docker seup + tests